# insta-spotify-status

./: .env.example  .gitignore  main.py  pyproject.toml
insta_spotify_status/: ascii_song_player_ui.py  spotify_api.py  utils.py
